{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "9720e749-01c4-49c8-9904-c53444750e64",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "b45be751-787e-4127-933f-08a57c83581f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "54483823-7ff7-4bd0-9576-164904759985",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Talk",
                    "type": "Button",
                    "id": "048b1f48-7637-4775-b545-3293431da627",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ff49a4b6-db4c-45f7-bb42-4759ac548f1e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2608d64a-3f59-4350-90c6-79f4eac09484",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8a140d6e-d5f1-4347-a186-9cbfb8fde9e3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "30d6171e-cbf0-4cb9-b665-9d743f55bc5c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "24309311-43b9-499d-9965-f7fa9305abf7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4804c00f-1be7-452b-b2ac-d8075bc052e9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66e108be-94b9-4c44-811c-190034e0e0df",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Talk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}